fix: :bug: fix game rules diagram clipping modal in mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ footer .btn {
 }
 
 .games-rules {
-    width: 400px;
+    width: 100%;
 }
 
 /* styling for result icons */
